# packages/trpc/routers/admin.ts
@@ -794,7 +794,7 @@ export const adminAppRouter = router({
           .nullable(),
         assetInfo: z
           .object({
-            assetType: z.enum(["image", "pdf"]),
+            assetType: z.enum(["image", "pdf", "video"]),
             hasContent: z.boolean(),
             fileName: z.string().nullable(),
           })
